[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Fireball/Fireball1.png" type="Texture" id=1]
[ext_resource path="res://assets/Fireball/Fireball2.png" type="Texture" id=2]
[ext_resource path="res://assets/Fireball/Fireball0.png" type="Texture" id=3]
[ext_resource path="res://items/Fireball.gd" type="Script" id=4]
[ext_resource path="res://assets/SoundEffects/fireballHit.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "fire",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 11.0454

[node name="Fireball" type="Area2D"]
collision_layer = 4
script = ExtResource( 4 )
speed = 400

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fire"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2, 0 )
shape = SubResource( 2 )

[node name="FireballHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0
max_distance = 500.0
attenuation = 0.0
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="hit" from="." to="." method="Global.gd"]
[connection signal="finished" from="FireballHit" to="." method="_on_FireballHit_finished"]
